--- a/LMS.Core/LMS.Core.csproj
+++ b/LMS.Core/LMS.Core.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.5" />
   </ItemGroup>
 
