Ändrat till User från IdentityUser

--- a/LMS/appsettings.json
+++ b/LMS/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LMS-B5E8D0D8-DE7A-4C16-BE8A-0748AF0F2A02;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LMS-B5E8D0D8-DE7A-4C16-BE8A-0748AF0F2A02;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LMS.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
