--- a/LMS/LMS.Web.csproj
+++ b/LMS/LMS.Web.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Documents\" />
+    <Folder Include="wwwroot\Documents\" />
   </ItemGroup>
 
 </Project>
